# Iptables-Secure

./: .env.example  .gitignore  .gitlab-ci.yml  Iptables.py  README.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: setup.cfg
docs/: CONTRIBUTING.md  architecture.md  security-guide.md
scripts/: publish_public.ps1
src/: Iptables.py
tests/: test_iptables.py  test_iptables_logic.py
