[metadata]
name = iptables-secure-manager
version = 1.0.0
description = Herramienta educativa de ciberseguridad para gestión de firewalls iptables
author = DevSecOps Team
license = GPL-3.0
url = https://github.com/devsebastian44/Iptables-Secure

[options]
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = src
include = *

[flake8]
max-line-length = 100
ignore = E501, W503, E203
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist

[pylint]
max-line-length = 100
disable = C0114, C0115, C0116

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    -v
    --tb=short
    --strict-markers
    --disable-warnings
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml

[coverage:run]
source = src
omit = 
    */tests/*
    */venv/*
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    
[bandit]
exclude_dirs = tests, docs, configs, scripts
skips = B101, B601
